<resources>
    <string name="app_name">Museum</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="uzbek">Uzbek</string>
    <string name="russian">Russian</string>
    <string name="english">English</string>

    <string name="badiy_ta_lim_tarixi">History of art education</string>
    <string name="home">Home</string>
    <string name="_2022_copyright_online_muzey">© 2022 Copyright: Online Muzey</string>
    <string name="contact">Contact</string>
    <string name="try_once_again">Try once again!</string>
    <string name="author">Author:</string>
    <string name="name">Name:</string>
    <string name="technique">Technique:</string>
    <string name="year">Year:</string>
    <string name="size">Size:</string>
    <string name="about">About:</string>
    <string name="show_more">Show more…</string>
    <string name="show_less">Show less…</string>
    <string name="loading">Loading…</string>

    <string name="contact_info">Mukhamedova Munisa Sabirovna \nProfessor of the Department of Museology of the National Institute of Arts and Design named after Kamoliddin Behzod (Uzbekistan, Tashkent)\n\nEmail: munisa.muhamedova@mail.ru\nMobile +998 90 351 26 82\n                   +998 93 546 74 93</string>

</resources>