<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.museumonline.museummm.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_history"
        android:name="com.museumonline.museummm.ui.history.HistoryFragment"
        android:label="@string/badiy_ta_lim_tarixi"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/nav_contact"
        android:name="com.museumonline.museummm.ui.contacts.ContactsFragment"
        android:label="@string/contact"
        tools:layout="@layout/fragment_contacts" />
</navigation>