<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="#15222B"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnEnglish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            app:iconSize="24dp"
            app:iconTint="@null"
            android:text="@string/english"
            app:icon="@drawable/flag_uk"
            app:cornerRadius="16dp"
            app:strokeColor="@color/white"
            app:strokeWidth="1dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnUzbek"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            app:iconSize="24dp"
            app:iconTint="@null"
            android:text="@string/uzbek"
            app:icon="@drawable/flag_uz"
            app:cornerRadius="16dp"
            app:strokeColor="@color/white"
            app:strokeWidth="1dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRussian"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            app:iconSize="24dp"
            app:iconTint="@null"
            android:text="@string/russian"
            app:icon="@drawable/flag_ru"
            app:cornerRadius="16dp"
            app:strokeColor="@color/white"
            app:strokeWidth="1dp" />

    </LinearLayout>

</androidx.cardview.widget.CardView>
