<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/aboveContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#14808080">

        <TextView
            android:gravity="center"
            android:textAlignment="center"
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/manjari_regular"
            android:text="@string/badiy_ta_lim_tarixi"
            android:layout_marginTop="36dp"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </FrameLayout>


    <FrameLayout
        android:id="@+id/bottomContainer"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:id="@+id/infoLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="#14808080"
            android:gravity="bottom"
            android:paddingHorizontal="10dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">

            <LinearLayout
                android:id="@+id/content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <androidx.core.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:id="@+id/author"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/manjari_regular"
                                android:text="@string/author"
                                android:textColor="@color/white"
                                android:textSize="14sp" />

                            <TextView
                                android:id="@+id/tvAuthor"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="4dp"
                                android:fontFamily="@font/manjari_regular"
                                android:textColor="@color/white"
                                android:textSize="14sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:id="@+id/technique"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/manjari_regular"
                                android:text="@string/technique"
                                android:textColor="@color/white"
                                android:textSize="14sp" />

                            <TextView
                                android:id="@+id/tvTechnique"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="4dp"
                                android:fontFamily="@font/manjari_regular"
                                android:textColor="@color/white"
                                android:textSize="14sp" />

                        </LinearLayout>

                        <androidx.core.widget.NestedScrollView
                            android:id="@+id/infoContainer"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:visibility="gone">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content">

                                    <TextView
                                        android:id="@+id/year"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:fontFamily="@font/manjari_regular"
                                        android:text="@string/year"
                                        android:textColor="@color/white"
                                        android:textSize="14sp" />

                                    <TextView
                                        android:id="@+id/tvYear"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginStart="4dp"
                                        android:fontFamily="@font/manjari_regular"
                                        android:textColor="@color/white"
                                        android:textSize="14sp" />
                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content">

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:fontFamily="@font/manjari_regular"
                                        android:text="@string/size"
                                        android:textColor="@color/white"
                                        android:textSize="14sp" />

                                    <TextView
                                        android:id="@+id/tvSize"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginStart="4dp"
                                        android:fontFamily="@font/manjari_regular"
                                        android:textColor="@color/white"
                                        android:textSize="14sp" />
                                </LinearLayout>

                                <LinearLayout
                                    android:layout_marginTop="8dp"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content">

                                    <TextView
                                        android:id="@+id/tvAbout"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:fontFamily="@font/manjari_regular"
                                        android:textColor="@color/white"
                                        android:textSize="14sp" />
                                </LinearLayout>

                            </LinearLayout>
                        </androidx.core.widget.NestedScrollView>
                    </LinearLayout>


                </androidx.core.widget.NestedScrollView>


            </LinearLayout>

            <TextView
                android:id="@+id/tvMore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginHorizontal="4dp"
                android:background="@drawable/btn_ripple_more"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/manjari_bold"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/show_more"
                android:textAlignment="center"
                android:textColor="#3E90F4"
                android:textSize="14sp" />

        </LinearLayout>
    </FrameLayout>


</RelativeLayout>